// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    sortBy="Date"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="title"
        >
          Ideas Board:
        </h1>,
        <label
          className="label"
        >
          Sort by:
          <select
            className="select"
            onChange={[Function]}
            value="Date"
          >
            <option
              value="Date"
            >
              Date
            </option>
            <option
              value="Alphabet"
            >
              Alphabet
            </option>
          </select>
        </label>,
      ],
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Ideas Board:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Ideas Board:",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Sort by:",
            <select
              className="select"
              onChange={[Function]}
              value="Date"
            >
              <option
                value="Date"
              >
                Date
              </option>
              <option
                value="Alphabet"
              >
                Alphabet
              </option>
            </select>,
          ],
          "className": "label",
        },
        "ref": null,
        "rendered": Array [
          "Sort by:",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  value="Date"
                >
                  Date
                </option>,
                <option
                  value="Alphabet"
                >
                  Alphabet
                </option>,
              ],
              "className": "select",
              "onChange": [Function],
              "value": "Date",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Date",
                  "value": "Date",
                },
                "ref": null,
                "rendered": "Date",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Alphabet",
                  "value": "Alphabet",
                },
                "ref": null,
                "rendered": "Alphabet",
                "type": "option",
              },
            ],
            "type": "select",
          },
        ],
        "type": "label",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="title"
          >
            Ideas Board:
          </h1>,
          <label
            className="label"
          >
            Sort by:
            <select
              className="select"
              onChange={[Function]}
              value="Date"
            >
              <option
                value="Date"
              >
                Date
              </option>
              <option
                value="Alphabet"
              >
                Alphabet
              </option>
            </select>
          </label>,
        ],
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Ideas Board:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Ideas Board:",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Sort by:",
              <select
                className="select"
                onChange={[Function]}
                value="Date"
              >
                <option
                  value="Date"
                >
                  Date
                </option>
                <option
                  value="Alphabet"
                >
                  Alphabet
                </option>
              </select>,
            ],
            "className": "label",
          },
          "ref": null,
          "rendered": Array [
            "Sort by:",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    value="Date"
                  >
                    Date
                  </option>,
                  <option
                    value="Alphabet"
                  >
                    Alphabet
                  </option>,
                ],
                "className": "select",
                "onChange": [Function],
                "value": "Date",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Date",
                    "value": "Date",
                  },
                  "ref": null,
                  "rendered": "Date",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Alphabet",
                    "value": "Alphabet",
                  },
                  "ref": null,
                  "rendered": "Alphabet",
                  "type": "option",
                },
              ],
              "type": "select",
            },
          ],
          "type": "label",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`renders without crashing 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    sortBy="Alphabet"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="title"
        >
          Ideas Board:
        </h1>,
        <label
          className="label"
        >
          Sort by:
          <select
            className="select"
            onChange={[Function]}
            value="Alphabet"
          >
            <option
              value="Date"
            >
              Date
            </option>
            <option
              value="Alphabet"
            >
              Alphabet
            </option>
          </select>
        </label>,
      ],
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Ideas Board:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Ideas Board:",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Sort by:",
            <select
              className="select"
              onChange={[Function]}
              value="Alphabet"
            >
              <option
                value="Date"
              >
                Date
              </option>
              <option
                value="Alphabet"
              >
                Alphabet
              </option>
            </select>,
          ],
          "className": "label",
        },
        "ref": null,
        "rendered": Array [
          "Sort by:",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  value="Date"
                >
                  Date
                </option>,
                <option
                  value="Alphabet"
                >
                  Alphabet
                </option>,
              ],
              "className": "select",
              "onChange": [Function],
              "value": "Alphabet",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Date",
                  "value": "Date",
                },
                "ref": null,
                "rendered": "Date",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Alphabet",
                  "value": "Alphabet",
                },
                "ref": null,
                "rendered": "Alphabet",
                "type": "option",
              },
            ],
            "type": "select",
          },
        ],
        "type": "label",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="title"
          >
            Ideas Board:
          </h1>,
          <label
            className="label"
          >
            Sort by:
            <select
              className="select"
              onChange={[Function]}
              value="Alphabet"
            >
              <option
                value="Date"
              >
                Date
              </option>
              <option
                value="Alphabet"
              >
                Alphabet
              </option>
            </select>
          </label>,
        ],
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Ideas Board:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Ideas Board:",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Sort by:",
              <select
                className="select"
                onChange={[Function]}
                value="Alphabet"
              >
                <option
                  value="Date"
                >
                  Date
                </option>
                <option
                  value="Alphabet"
                >
                  Alphabet
                </option>
              </select>,
            ],
            "className": "label",
          },
          "ref": null,
          "rendered": Array [
            "Sort by:",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    value="Date"
                  >
                    Date
                  </option>,
                  <option
                    value="Alphabet"
                  >
                    Alphabet
                  </option>,
                ],
                "className": "select",
                "onChange": [Function],
                "value": "Alphabet",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Date",
                    "value": "Date",
                  },
                  "ref": null,
                  "rendered": "Date",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Alphabet",
                    "value": "Alphabet",
                  },
                  "ref": null,
                  "rendered": "Alphabet",
                  "type": "option",
                },
              ],
              "type": "select",
            },
          ],
          "type": "label",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
